# windwise

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
forecast/: __init__.py  fetcher.py  ingester.py
grafana/: windwise.json
observation/: __init__.py  fetcher.py  ingester.py  observation.py
scheduler/: jobs.py
utils/: logger.py
